@@ -1,6 +1,7 @@
 Changes
 lib/Algorithm/Evolutionary/Simple.pm
 script/simple-EA.pl
+script/maxones.pl
 Makefile.PL
 MANIFEST			This list of files
 README
