@@ -1,3 +1,9 @@
+2011-12-06  Juan J. Merelo Guervós  <jjmerelo@gmail.com>
+
+	* lib/Algorithm/Evolutionary/Simple.pm (single_generation):
+	Changing documentation and adding a rather useless
+	single_generation 
+
 2011-11-06  Juan J. Merelo  <jmerelo@sheldon>
 
 	* MANIFEST: Taking out unneeded files, and putting in those needed 
